crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__objects-3.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"let obj = {a, b, ...others};\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 28,
                    },
                },
                span: 0..28,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 7,
                                },
                            },
                            span: 4..7,
                            kind: Ident(
                                BindingIdent {
                                    name: "obj",
                                    mutable: false,
                                    span: 4..7,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 7,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 10,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 27,
                                    },
                                },
                                span: 10..27,
                                kind: Obj(
                                    Obj {
                                        props: [
                                            Prop(
                                                Shorthand(
                                                    Ident {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 11,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 12,
                                                            },
                                                        },
                                                        span: 11..12,
                                                        name: "a",
                                                    },
                                                ),
                                            ),
                                            Prop(
                                                Shorthand(
                                                    Ident {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 14,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 15,
                                                            },
                                                        },
                                                        span: 14..15,
                                                        name: "b",
                                                    },
                                                ),
                                            ),
                                            Spread(
                                                SpreadElement {
                                                    expr: Expr {
                                                        loc: SourceLocation {
                                                            start: Position {
                                                                line: 0,
                                                                column: 20,
                                                            },
                                                            end: Position {
                                                                line: 0,
                                                                column: 26,
                                                            },
                                                        },
                                                        span: 20..26,
                                                        kind: Ident(
                                                            Ident {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 20,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 26,
                                                                    },
                                                                },
                                                                span: 20..26,
                                                                name: "others",
                                                            },
                                                        ),
                                                        inferred_type: None,
                                                    },
                                                },
                                            ),
                                        ],
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                    },
                ),
            },
        ],
    },
)
