crates/escalier_old_parser/src/snapshots/escalier_old_parser__tests__objects.snap
---
source: crates/escalier_old_parser/src/lib.rs
expression: "parse(\"{x: 5, y: 10};\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 14,
                    },
                },
                span: 0..14,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 13,
                            },
                        },
                        span: 0..13,
                        kind: Obj(
                            Obj {
                                props: [
                                    Prop(
                                        KeyValue(
                                            KeyValueProp {
                                                key: Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 1,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 2,
                                                        },
                                                    },
                                                    span: 1..2,
                                                    name: "x",
                                                },
                                                value: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 4,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 5,
                                                        },
                                                    },
                                                    span: 4..5,
                                                    kind: Lit(
                                                        Num(
                                                            Num {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 4,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 5,
                                                                    },
                                                                },
                                                                span: 4..5,
                                                                value: "5",
                                                            },
                                                        ),
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    ),
                                    Prop(
                                        KeyValue(
                                            KeyValueProp {
                                                key: Ident {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 7,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 8,
                                                        },
                                                    },
                                                    span: 7..8,
                                                    name: "y",
                                                },
                                                value: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 10,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 12,
                                                        },
                                                    },
                                                    span: 10..12,
                                                    kind: Lit(
                                                        Num(
                                                            Num {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 10,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 12,
                                                                    },
                                                                },
                                                                span: 10..12,
                                                                value: "10",
                                                            },
                                                        ),
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ),
                                    ),
                                ],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
